palworld/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: palworld
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.241
    #,fdeb:abba:237c::f1
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: palworld
  ports:
    - name: palworld
      protocol: UDP
      port: 8211
      targetPort: 8211
  externalTrafficPolicy: Local
